--- a/BTL_QlBi_a/Views/Home/HoaDon.cshtml
+++ b/BTL_QlBi_a/Views/Home/HoaDon.cshtml
@@ -10,6 +10,8 @@
     <script src="~/asset/js/qlHoaDon/filterHoaDon.js"></script>
     <script src="~/asset/js/qlHoaDon/chiTietHoaDon.js"></script>
     <script src="~/asset/js/qlHoaDon/xuatBaoCaoHoaDon.js"></script>
+    <script src="~/asset/js/qlHoaDon/Loading.js"></script>
+
 
     <script>
         // ===============================
