--- a/BTL_QlBi_a/Views/Home/NhanVien.cshtml
+++ b/BTL_QlBi_a/Views/Home/NhanVien.cshtml
@@ -27,7 +27,7 @@
             @if (isAdmin || isQuanLy)
             {
                 <button class="btn btn-primary" onclick="NhanVienManager.openAddModal()">
-                    ➕ Thêm nhân viên
+                    Thêm nhân viên
                 </button>
                 <button class="btn btn-primary" onclick="openAttendanceModal()">
                     Chấm công
