--- a/BTL_QlBi_a/Views/Shared/_LayoutUser.cshtml
+++ b/BTL_QlBi_a/Views/Shared/_LayoutUser.cshtml
@@ -39,10 +39,44 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav ms-auto align-items-center">
                     <li class="nav-item"><a class="nav-link" href="/Users">Trang chủ</a></li>
                     <li class="nav-item"><a class="nav-link" href="#tables">Bàn chơi</a></li>
-                    <li class="nav-item"><a class="nav-link btn btn-outline-info px-3" href="#member" style="border: 1px solid var(--primary-color);">Tra cứu hội viên</a></li>
+
+                    <li class="nav-item"><a class="nav-link" href="#member">Tra cứu</a></li>
+
+                                    @if (Context.Session.GetInt32("MaKH") != null)
+                                    {
+                                        // TRƯỜNG HỢP 1: ĐÃ ĐĂNG NHẬP
+                            <li class="nav-item dropdown ms-3">
+                                <a class="nav-link dropdown-toggle btn btn-outline-light border-0" href="#" role="button" data-bs-toggle="dropdown">
+                                                @* Hiển thị Avatar nhỏ nếu có *@
+                                    <i class="fa-solid fa-circle-user me-1"></i>
+                                    Xin chào, @Context.Session.GetString("TenKH")
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark">
+                                    <li><a class="dropdown-item" href="#">Hồ sơ cá nhân</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li>
+                                        <form asp-controller="Account" asp-action="Logout" method="post" class="d-inline">
+                                            <button type="submit" class="dropdown-item text-danger">
+                                                <i class="fa-solid fa-right-from-bracket me-2"></i>Đăng xuất
+                                            </button>
+                                        </form>
+                                    </li>
+                                </ul>
+                            </li>
+                                    }
+                                    else
+                                    {
+                                        // TRƯỜNG HỢP 2: CHƯA ĐĂNG NHẬP (KHÁCH VÃNG LAI)
+                            <li class="nav-item ms-3">
+                                <a class="btn btn-outline-info me-2" href="/Account/Login">Đăng nhập</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="btn btn-primary" href="/Account/Signup">Đăng ký</a>
+                            </li>
+                                    }
                 </ul>
             </div>
         </div>
